--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <!-- Mobile Metas -->
    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
    <!-- Site Metas -->
-   <title>Game Info</title>
+   <title>Torneos PlayFast.com</title>
    <meta name="keywords" content="">
    <meta name="description" content="">
    <meta name="author" content="">
@@ -85,83 +85,10 @@
                               <div class="menu">
                                  <nav class="navbar navbar-inverse">
                                     <div class="navbar-header">
-                                       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".js-navbar-collapse">
-                                       <span class="sr-only">Toggle navigation</span>
-                                       <span class="icon-bar"></span>
-                                       <span class="icon-bar"></span>
-                                       <span class="icon-bar"></span>
-                                       </button>
-                                       <a class="navbar-brand" href="#">Menu</a>
-                                    </div>
-                                    <div class="collapse navbar-collapse js-navbar-collapse">
-                                       <ul class="nav navbar-nav">
-                                          <li class="active"><a href="index.html">Home</a></li>
-                                          <li><a href="about.html">About</a></li>
-                                          <li><a href="team.html">Team</a></li>
-                                          <li><a href="news.html">News</a></li>
-                                          <li class="dropdown mega-dropdown">
-                                             <a href="match" class="dropdown-toggle" data-toggle="dropdown">Match<span class="caret"></span></a>				
-                                             <ul class="dropdown-menu mega-dropdown-menu">
-                                                <li class="col-sm-8">
-                                                   <ul>
-                                                      <li class="dropdown-header">Men Collection</li>
-                                                      <div id="menCollection" class="carousel slide" data-ride="carousel">
-                                                         <div class="carousel-inner">
-                                                            <div class="item active">
-                                                               <div class="banner-for-match"><a href="#"><img class="img-responsive" src="images/match-banner1.jpg" alt="#" /></a></div>
-                                                            </div>
-                                                            <!-- End Item -->
-                                                            <div class="item">
-                                                               <div class="banner-for-match"><a href="#"><img class="img-responsive" src="images/match-banner1.jpg" alt="#" /></a></div>
-                                                            </div>
-                                                            <!-- End Item -->
-                                                            <div class="item">
-                                                               <div class="banner-for-match"><a href="#"><img class="img-responsive" src="images/match-banner1.jpg" alt="#" /></a></div>
-                                                            </div>
-                                                            <!-- End Item -->                                
-                                                         </div>
-                                                         <!-- End Carousel Inner -->
-                                                         <!-- Controls -->
-                                                         <a class="left carousel-control" href="#menCollection" role="button" data-slide="prev">
-                                                         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                                                         <span class="sr-only">Previous</span>
-                                                         </a>
-                                                         <a class="right carousel-control" href="#menCollection" role="button" data-slide="next">
-                                                         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                                                         <span class="sr-only">Next</span>
-                                                         </a>
-                                                      </div>
-                                                      <!-- /.carousel -->
-                                                   </ul>
-                                                </li>
-                                                <li class="col-sm-4">
-                                                   <ul class="menu-inner">
-                                                      <li class="dropdown-header">Next Matchs</li>
-                                                      <li><a href="#">Contrary vs classical</a></li>
-                                                      <li><a href="#">Discovered vs undoubtable</a></li>
-                                                      <li><a href="#">Contrary vs classical</a></li>
-                                                      <li><a href="#">Discovered vs undoubtable</a></li>
-                                                      <li><a href="#">Contrary vs classical</a></li>
-                                                      <li><a href="#">Discovered vs undoubtable</a></li>
-                                                      <li><a href="#">Contrary vs classical</a></li>
-                                                      <li><a href="#">Discovered vs undoubtable</a></li>
-                                                   </ul>
-                                                </li>
-                                             </ul>
-                                          </li>
-                                          <li><a href="blog.html">Blog</a></li>
-                                          <li><a href="contact.html">contact</a></li>
-                                       </ul>
+                                     
                                     </div>
                                     <!-- /.nav-collapse -->
                                  </nav>
-                                 <div class="search-bar">
-                                    <div id="imaginary_container">
-                                       <div class="input-group stylish-input-group">
-                                          <input type="text" class="form-control"  placeholder="Search" >
-                                          <span class="input-group-addon">
-                                          <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>  
-                                          </span>
                                        </div>
                                     </div>
                                  </div>
@@ -189,10 +116,8 @@
                         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12"></div>
                         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                            <div class="slider-contant" data-animation="animated fadeInRight">
-                              <h3>If you Don’t Practice<br>You <span class="color-yellow">Don’t Derserve</span><br>to win!</h3>
-                              <p>If you use this site regularly and would like to help keep the site on the Internet,<br>
-                                 please consider donating a small sum to help pay..
-                              </p>
+                              <h3>1er Torneo PlayFast<br>You <span class="color-yellow">FIFA 2022</span><br>to win!</h3>
+                              
                               <button class="btn btn-primary btn-lg">Read More</button>
                            </div>
                         </div>
