--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
                         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12"></div>
                         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                            <div class="slider-contant" data-animation="animated fadeInRight">
-                              <h3>If you Don’t Practice<br>You <span class="color-yellow">Don’t Derserve</span><br>to win!</h3>
-                              <p>You can make a case for several potential winners of<br>the expanded European Championships.</p>
+                             <h3>1er Torneo PlayFast<br>You <span class="color-yellow">FIFA 2022</span><br>to win!</h3>
                               <button class="btn btn-primary btn-lg">Button</button>
                            </div>
                         </div>
@@ -170,10 +169,10 @@
             <div class="news">
                <div class="container">
                   <div class="heading-slider">
-                     <p class="headline"><i class="fa fa-star" aria-hidden="true"></i> Top Headlines :</p>
+                     <p class="headline"><i class="fa fa-star" aria-hidden="true"></i> Anunciado por: </p>
                      <!--made by vipul mirajkar thevipulm.appspot.com-->
                      <h1>
-                     <a href="" class="typewrite" data-period="2000" data-type='[ "Contrary to popular belief, Lorem Ipsum is not simply random text.", "Lorem Ipsum is simply dummy text of the printing and typesetting industry.", "It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout."]'>
+                     <a href="" class="typewrite" data-period="2000" data-type='[ "Urbano 106", "eDevice", "NTF"]'>
                      <span class="wrap"></span>
                      </a>
                      </h1	   
@@ -194,12 +193,12 @@
                            <ul>
                               <li>
                                  <img src="images/img-03.png" alt="">
-                                 <span>Footbal Team</span>
+                                 <span>Urbano 106</span>
                               </li>
                               <li class="vs"><span>vs</span></li>
                               <li>
                                  <img src="images/img-04.png" alt="">
-                                 <span>Super Team Club</span>
+                                 <span>Book Club</span>
                               </li>
                            </ul>
                         </div>
@@ -212,235 +211,26 @@
             <div class="row">
                <div class="full">
                   <div class="right-match-time">
-                     <h2>Next Match</h2>
+                     <h2>Torneo Playfast</h2>
                      <ul id="countdown-1" class="countdown">
-                        <li><span class="days">10 </span>Day </li>
+                        <li><span class="days">15 </span>Day </li>
                         <li><span class="hours">5 </span>Hours </li>
                         <li><span class="minutes">25 </span>Minutes </li>
                         <li><span class="seconds">10 </span>Seconds </li>
                      </ul>
-                     <span>12/02/2017 /19:00pm</span>
+                     <span>20/05/2022 /19:00pm</span>
                   </div>
                </div>
             </div>
          </div>
       </div>
-      <section id="contant" class="contant">
-         <div class="container">
-            <div class="row">
-               <div class="col-lg-4 col-sm-4 col-xs-12">
-                  <aside id="sidebar" class="left-bar">
-                     <div class="banner-sidebar">
-                        <img class="img-responsive" src="images/img-05.jpg" alt="#" />
-                        <h3>Lorem Ipsum is simply dummy text..</h3>
-                     </div>
-                  </aside>
-                  <h4>Match Fixture</h4>
-                  <aside id="sidebar" class="left-bar">
-                     <div class="feature-matchs">
-                        <div class="team-btw-match">
-                           <ul>
-                              <li>
-                                 <img src="images/img-01_002.png" alt="">
-                                 <span>Portugal</span>
-                              </li>
-                              <li class="vs"><span>vs</span></li>
-                              <li>
-                                 <img src="images/img-02.png" alt="">
-                                 <span>Germany</span>
-                              </li>
-                           </ul>
-                           <ul>
-                              <li>
-                                 <img src="images/img-03_002.png" alt="">
-                                 <span>Portugal</span>
-                              </li>
-                              <li class="vs"><span>vs</span></li>
-                              <li>
-                                 <img src="images/img-04_003.png" alt="">
-                                 <span>Germany</span>
-                              </li>
-                           </ul>
-                           <ul>
-                              <li>
-                                 <img src="images/img-05_002.png" alt="">
-                                 <span>Portugal</span>
-                              </li>
-                              <li class="vs"><span>vs</span></li>
-                              <li>
-                                 <img src="images/img-06.png" alt="">
-                                 <span>Germany</span>
-                              </li>
-                           </ul>
-                           <ul>
-                              <li>
-                                 <img src="images/img-07_002.png" alt="">
-                                 <span>Portugal</span>
-                              </li>
-                              <li class="vs"><span>vs</span></li>
-                              <li>
-                                 <img src="images/img-08.png" alt="">
-                                 <span>Germany</span>
-                              </li>
-                           </ul>
-                           <ul>
-                              <li>
-                                 <img src="images/img-05_002.png" alt="">
-                                 <span>Portugal</span>
-                              </li>
-                              <li class="vs"><span>vs</span></li>
-                              <li>
-                                 <img src="images/img-06.png" alt="">
-                                 <span>Germany</span>
-                              </li>
-                           </ul>
-                        </div>
-                     </div>
-                  </aside>
-                  <h4>Points Table</h4>
-                  <aside id="sidebar" class="left-bar">
-                     <div class="feature-matchs">
-                        <table class="table table-bordered table-hover">
-                           <thead>
-                              <tr>
-                                 <th>#</th>
-                                 <th>Team</th>
-                                 <th>P</th>
-                                 <th>W</th>
-                                 <th>L</th>
-                              </tr>
-                           </thead>
-                           <tbody>
-                              <tr>
-                                 <td>1</td>
-                                 <td><img src="images/img-01_004.png" alt="">Liverpool</td>
-                                 <td>10</td>
-                                 <td>12</td>
-                                 <td>20</td>
-                              </tr>
-                              <tr>
-                                 <td>2</td>
-                                 <td><img src="images/img-02_002.png" alt="">Chelsea</td>
-                                 <td>10</td>
-                                 <td>12</td>
-                                 <td>20</td>
-                              </tr>
-                              <tr>
-                                 <td>3</td>
-                                 <td><img src="images/img-03_003.png" alt="">Norwich City</td>
-                                 <td>20</td>
-                                 <td>15</td>
-                                 <td>20</td>
-                              </tr>
-                              <tr>
-                                 <td>4</td>
-                                 <td><img src="images/img-04_002.png" alt="">West Brom</td>
-                                 <td>60</td>
-                                 <td>10</td>
-                                 <td>60</td>
-                              </tr>
-                              <tr>
-                                 <td>5</td>
-                                 <td><img src="images/img-05.png" alt="">sunderland</td>
-                                 <td>30</td>
-                                 <td>06</td>
-                                 <td>30</td>
-                              </tr>
-                              <tr>
-                                 <td>1</td>
-                                 <td><img src="images/img-01_004.png" alt="">Liverpool</td>
-                                 <td>10</td>
-                                 <td>12</td>
-                                 <td>20</td>
-                              </tr>
-                           </tbody>
-                        </table>
-                     </div>
-                  </aside>
-                  <div class="content-widget top-story" style="background: url(images/top-story-bg.jpg);">
-                     <div class="top-stroy-header">
-                        <h2>Top Soccer Headlines Story <a href="#" class="fa fa-fa fa-angle-right"></a></h2>
-                        <span class="date">July 05, 2017</span>
-                        <h2>Other Headlines</h2>
-                     </div>
-                     <ul class="other-stroies">
-                        <li><a href="#">Wenger Vardy won't start</a></li>
-                        <li><a href="#">Evans: Vardy just</a></li>
-                        <li><a href="#">Pires and Murray </a></li>
-                        <li><a href="#">Okazaki backing</a></li>
-                        <li><a href="#">Wolfsburg's Rodriguez</a></li>
-                        <li><a href="#">Jamie Vardy compared</a></li>
-                        <li><a href="#">Arsenal target Mkhitaryan</a></li>
-                        <li><a href="#">Messi wins libel case.</a></li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-lg-8 col-sm-8 col-xs-12">
-                  <div class="news-post-holder">
-                     <div class="news-post-widget">
-                        <img class="img-responsive" src="images/img-01_002.jpg" alt="">
-                        <div class="news-post-detail">
-                           <span class="date">20 march 2016</span>
-                           <h2><a href="blog-detail.html">At vero eos et accusamus et iusto odio dignissimos ducimus</a></h2>
-                           <p>Just hours after that his grandma had died, Angel Di Maria imagined how she might react if he didn't play</p>
-                        </div>
-                     </div>
-                     <div class="news-post-widget">
-                        <img class="img-responsive" src="images/img-02_003.jpg" alt="">
-                        <div class="news-post-detail">
-                           <span class="date">20 march 2016</span>
-                           <h2><a href="blog-detail.html">At vero eos et accusamus et iusto odio dignissimos ducimus</a></h2>
-                           <p>Just hours after that his grandma had died, Angel Di Maria imagined how she might react if he didn't play</p>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="news-post-holder">
-                     <div class="news-post-widget">
-                        <img class="img-responsive" src="images/img-03_003.jpg" alt="">
-                        <div class="news-post-detail">
-                           <span class="date">20 march 2016</span>
-                           <h2><a href="blog-detail.html">At vero eos et accusamus et iusto odio dignissimos ducimus</a></h2>
-                           <p>Just hours after that his grandma had died, Angel Di Maria imagined how she might react if he didn't play</p>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </section>
-      <section>
-         <div class="container">
-            <div class="row">
-               <div class="col-md-12">
-                  <div class="full">
-                     <div class="main-heading sytle-2">
-                        <h2>Video</h2>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium<br>doloremque laudantium, totam rem aperiam</p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </section>
-      <section class="video_section_main theme-padding middle-bg vedio">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-12">
-                  <div class="full">
-                     <div class="match_vedio">
-                        <img class="img-responsive" src="images/img-07.jpg" alt="#" />
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </section>
+      
       <div class="team-holder theme-padding">
          <div class="container">
             <div class="main-heading-holder">
                <div class="main-heading sytle-2">
-                  <h2>Meet Your Team</h2>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium<br>doloremque laudantium, totam rem aperiam</p>
+                  <h2>Participantes</h2>
+                  <p>16 seleccionados competirán en parejas:</p>
                </div>
             </div>
             <div id="team-slider">
@@ -449,9 +239,9 @@
                      <div class="team-column style-2">
                         <img src="images/img-1-1.jpg" alt="">
                         <div class="player-name">
-                           <div class="desination-2">Defender</div>
-                           <h5>Charles Wheeler</h5>
-                           <span class="player-number">12</span>
+                           <div class="desination-2">No1</div>
+                           <h5>$userid</h5>
+                           <span class="player-number">10</span>
                         </div>
                         <div class="overlay">
                            <div class="team-detail-hover position-center-x">
@@ -471,7 +261,7 @@
                      <div class="team-column style-2">
                         <img src="images/img-1-2.jpg" alt="">
                         <div class="player-name">
-                           <div class="desination-2">Defender</div>
+                           <div class="desination-2">No2</div>
                            <h5>Charles Wheeler</h5>
                            <span class="player-number">12</span>
                         </div>
@@ -483,7 +273,7 @@
                         <div class="player-name">
                            <div class="desination-2">Defender</div>
                            <h5>Charles Wheeler</h5>
-                           <span class="player-number">12</span>
+                           <span class="player-number">13</span>
                         </div>
                      </div>
                   </div>
@@ -493,7 +283,7 @@
                         <div class="player-name">
                            <div class="desination-2">Defender</div>
                            <h5>Charles Wheeler</h5>
-                           <span class="player-number">12</span>
+                           <span class="player-number">69</span>
                         </div>
                      </div>
                   </div>
@@ -510,7 +300,7 @@
                         <div class="footer-logo">
                            <a href="#"><img src="images/footer-logo.png" alt="#" /></a>
                         </div>
-                        <p>Most of our events have hard and easy route choices as we are always keen to encourage new riders.</p>
+                        <p>Torneos PlayFast</p>
                         <ul class="social-icons style-4 pull-left">
                            <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
                            <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
@@ -520,42 +310,7 @@
                      </div>
                   </div>
                </div>
-               <div class="col-md-2">
-                  <div class="full">
-                     <div class="footer-widget">
-                        <h3>Menu</h3>
-                        <ul class="footer-menu">
-                           <li><a href="about.html">About Us</a></li>
-                           <li><a href="team.html">Our Team</a></li>
-                           <li><a href="news.html">Latest News</a></li>
-                           <li><a href="matche.html">Recent Matchs</a></li>
-                           <li><a href="blog.html">Our Blog</a></li>
-                           <li><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-3">
-                  <div class="full">
-                     <div class="footer-widget">
-                        <h3>Contact us</h3>
-                        <ul class="address-list">
-                           <li><i class="fa fa-map-marker"></i> Lorem Ipsum is simply dummy text of the printing..</li>
-                           <li><i class="fa fa-phone"></i> 123 456 7890</li>
-                           <li><i style="font-size:20px;top:5px;" class="fa fa-envelope"></i> demo@gmail.com</li>
-                        </ul>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-3">
-                  <div class="full">
-                     <div class="contact-footer">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d120615.72236587871!2d73.07890527988283!3d19.140910987164396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1527759905404" width="600" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
+             
          <div class="footer-bottom">
             <div class="container">
                <p>Copyright © 2018 Distributed by <a href="https://themewagon.com/" target="_blank">ThemeWagon</a></p>
