--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
              
          <div class="footer-bottom">
             <div class="container">
-               <p>Copyright © 2018 Distributed by <a href="https://themewagon.com/" target="_blank">ThemeWagon</a></p>
+               <p>Copyright © PlayFast.com</p>
             </div>
          </div>
       </footer>
