--- a/index.html
+++ b/index.html
@@ -60,19 +60,6 @@
                               <li><a class="youtube" href="#"><i class="fa fa-youtube-play"></i></a></li>
                               <li><a class="pinterest" href="#"><i class="fa fa-pinterest-p"></i></a></li>
                            </ul>
-                           <!-- end social icon -->
-                           <!-- button section -->
-                           <ul class="login">
-                              <li class="login-modal">
-                                 <a href="#" class="login"><i class="fa fa-user"></i>Login</a>
-                              </li>
-                              <li>
-                                 <div class="cart-option">
-                                    <a href="#"><i class="fa fa-shopping-cart"></i>Register</a>
-                                 </div>
-                              </li>
-                           </ul>
-                           <!-- end button section -->
                         </div>
                      </div>
                   </div>
@@ -240,7 +227,7 @@
                         <img src="images/img-1-1.jpg" alt="">
                         <div class="player-name">
                            <div class="desination-2">No1</div>
-                           <h5>$userid</h5>
+                           <h5>LULU</h5>
                            <span class="player-number">10</span>
                         </div>
                         <div class="overlay">
@@ -262,8 +249,8 @@
                         <img src="images/img-1-2.jpg" alt="">
                         <div class="player-name">
                            <div class="desination-2">No2</div>
-                           <h5>Charles Wheeler</h5>
-                           <span class="player-number">12</span>
+                           <h5>Kathyg</h5>
+                           <span class="player-number">19</span>
                         </div>
                      </div>
                   </div>
@@ -271,8 +258,8 @@
                      <div class="team-column style-2">
                         <img src="images/img-1-3.jpg" alt="">
                         <div class="player-name">
-                           <div class="desination-2">Defender</div>
-                           <h5>Charles Wheeler</h5>
+                           <div class="desination-2">No3</div>
+                           <h5>gordo710</h5>
                            <span class="player-number">13</span>
                         </div>
                      </div>
@@ -281,9 +268,9 @@
                      <div class="team-column style-2">
                         <img src="images/img-1-4.jpg" alt="">
                         <div class="player-name">
-                           <div class="desination-2">Defender</div>
-                           <h5>Charles Wheeler</h5>
-                           <span class="player-number">69</span>
+                           <div class="desination-2">No4</div>
+                           <h5>JamesPQ12</h5>
+                           <span class="player-number">12</span>
                         </div>
                      </div>
                   </div>
