--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                            <div class="slider-contant" data-animation="animated fadeInRight">
                               <h3>1er Torneo PlayFast<br>You <span class="color-yellow">FIFA 2022</span><br>to win!</h3>
                               
-                              <button class="btn btn-primary btn-lg">Read More</button>
+                              <button class="btn btn-primary btn-lg">Ver Torneo</button>
                            </div>
                         </div>
                      </div>
