--- a/index.html
+++ b/index.html
@@ -102,8 +102,7 @@
                      </div>
                   </div>
 
-<iframe src="https://challonge.com/playfast/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
-
+<iframe src="https://challonge.com/playfastFIFA/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
                   <!-- /.item -->
                   <!-- Second slide -->
                   <div class="item skyblue" data-ride="carousel" data-interval="5000">
