--- a/index.html
+++ b/index.html
@@ -191,12 +191,12 @@
                   <div class="right-match-time">
                      <h2>Torneo Playfast</h2>
                      <ul id="countdown-1" class="countdown">
-                        <li><span class="days">15 </span>Day </li>
-                        <li><span class="hours">5 </span>Hours </li>
-                        <li><span class="minutes">25 </span>Minutes </li>
-                        <li><span class="seconds">10 </span>Seconds </li>
+                        <li><span class="days">0 </span>Day </li>
+                        <li><span class="hours">00 </span>Hours </li>
+                        <li><span class="minutes">00 </span>Minutes </li>
+                        <li><span class="seconds">00 </span>Seconds </li>
                      </ul>
-                     <span>01/06/2022 /19:00pm</span>
+                     <span>21/05/2022 /13:00 horas</span>
                   </div>
                </div>
             </div>
