--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12"></div>
                         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                            <div class="slider-contant" data-animation="animated fadeInRight">
-                              <h3>1er Torneo PlayFast<br>You <span class="color-yellow">FIFA 2022</span><br>to win!</h3>
+                              <h3>1er Torneo PlayFast<br>You <span class="color-yellow">FIFA 2022</span><br></h3>
                               
                               <button class="btn btn-primary btn-lg">Ver Torneo</button>
                            </div>
