--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                         <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12"></div>
                         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                            <div class="slider-contant" data-animation="animated fadeInRight">
-                              <h3>1er Torneo PlayFast<br>You <span class="color-yellow">FIFA 2022</span><br></h3>
+                              <h3>FIFA World Cup Qatar 2022<br> <span class="color-green">Brackets</span><br></h3>
                               
-                              <button class="btn btn-primary btn-lg">Ver Torneo</button>
+                              <button class="btn btn-primary btn-lg">Pick Bracket</button>
                            </div>
                         </div>
                      </div>
