--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                      <div class="col-md-6">
                         <div class="full">
                            <div class="logo">
-                              <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                              <a href="index.html"><img src="images/logo50.png" alt="#" /></a>
                            </div>
                         </div>
                      </div>
