--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <iframe src="https://challonge.com/BracketQatarWorldCup2022/module" width="100%" height="500" frameborder="0" scrolling="auto" allowtransparency="true"></iframe>
                  
 
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2xU-sdjBPKGiLH6y3aBhzYWXo8cOEv14lU8SlO_HlLA0X5w/viewform?embedded=true" width="640" height="830" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+<p style="text-align: center;"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf2xU-sdjBPKGiLH6y3aBhzYWXo8cOEv14lU8SlO_HlLA0X5w/viewform?embedded=true" width="640" height="830" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 
 
  <!-- /.item -->
